get cars with filter updated
