# docs/swagger.json
@@ -951,6 +951,20 @@
                     },
                     {
                         "type": "string",
+                        "description": "true or false new",
+                        "name": "new",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "true or false wheel",
+                        "name": "wheel",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "Filter by price from",
                         "name": "price_from",
                         "in": "query"
